# learn-js-reverse

./: pyproject.toml
app/: __init__.py
猿人学Web端爬虫攻防刷题平台/猿人学第1题-js混淆-乱码-无限debugger/: core.js  demo.py  readme.md
猿人学Web端爬虫攻防刷题平台/猿人学第2题-js-混淆-动态cookie/: core copy.js  core.js  demo.html  demo.py  origin_core.js  readme.md
猿人学Web端爬虫攻防刷题平台/猿人学第3题-headers请求顺序-sessionid/: demo.py  readme.md
猿人学Web端爬虫攻防刷题平台/猿人学第4题-雪碧图、样式干扰/: core.js  demo.py  readme.md
猿人学Web端爬虫攻防刷题平台/猿人学第5题-js混淆-乱码增强-补环境-atob/: demo.py  readme.md
猿人学Web端爬虫攻防刷题平台/猿人学第5题-js混淆-乱码增强-补环境-atob/js/: demo.html  nodejs.js  vmjs.js
猿人学Web端爬虫攻防刷题平台/猿人学第6题-颜文字-JSUnFuck/: demo.py  readme.md
猿人学Web端爬虫攻防刷题平台/猿人学第6题-颜文字-JSUnFuck/js/: nodejs.js
猿人学Web端爬虫攻防刷题平台/猿人学第7题-动态字体/: demo.py  font2xml.py  movie_font.xml  readme.md  字体XML.xml
